--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'com.auth0', name: 'java-jwt', version: '3.19.1'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	//implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
 }
 
